@@ -1,5 +1,60 @@
 _ChangelogURI: http://changelogs.ubuntu.com/changelogs/pool/%s/%s/%s/%s_%s/changelog
 
+Suite: jaunty
+RepositoryType: deb
+BaseURI: http://archive.ubuntu.com/ubuntu/
+BaseURI-powerpc: http://ports.ubuntu.com/
+MatchURI-powerpc: ports.ubuntu.com
+MatchURI: archive.ubuntu.com/ubuntu
+MirrorsFile-amd64: /usr/share/python-apt/templates/Ubuntu.mirrors
+MirrorsFile-i386: /usr/share/python-apt/templates/Ubuntu.mirrors
+_Description: Ubuntu 9.04 'Jaunty Jackalope'
+Component: main
+_CompDescription: Officially supported
+_CompDescriptionLong: Canonical-supported Open Source software
+Component: universe
+_CompDescription: Community-maintained
+_CompDescriptionLong: Community-maintained Open Source software
+Component: restricted
+_CompDescription: Non-free drivers
+_CompDescriptionLong: Proprietary drivers for devices
+Component: multiverse
+_CompDescription: Restricted software
+_CompDescriptionLong: Software restricted by copyright or legal issues
+
+Suite: jaunty
+MatchName: .*
+BaseURI: cdrom:\[Ubuntu.*9.04
+MatchURI: cdrom:\[Ubuntu.*9.04
+_Description: Cdrom with Ubuntu 9.04 'Jaunty Jackalope'
+Available: False
+Component: main
+_CompDescription: Officially supported
+Component: restricted
+_CompDescription: Restricted copyright
+
+Suite: jaunty-security
+ParentSuite: jaunty
+RepositoryType: deb
+BaseURI: http://security.ubuntu.com/ubuntu/
+MatchURI: archive.ubuntu.com/ubuntu|security.ubuntu.com
+_Description: Important security updates
+
+Suite: jaunty-updates
+ParentSuite: jaunty
+RepositoryType: deb
+_Description: Recommended updates
+
+Suite: jaunty-proposed
+ParentSuite: jaunty
+RepositoryType: deb
+_Description: Pre-released updates
+
+Suite: jaunty-backports
+ParentSuite: jaunty
+RepositoryType: deb
+_Description: Unsupported updates
+
 Suite: intrepid
 RepositoryType: deb
 BaseURI: http://archive.ubuntu.com/ubuntu/
