@@ -22,6 +22,8 @@ python-apt (0.7.8) UNRELEASED; urgency=low
     - fix detection of cdrom sources and add test for it
   * python/metaindex.cc
     - fix crash when incorrect attribute is given
+  * data/templates/Ubuntu.info.in:
+    - updated
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 30 Jul 2008 10:24:30 +0200
 
